First step of bash script refactoring. NB JMX short option is now -k1099. Can anyone check to see if it behaves like earlier?
svn path=/trunk/eXist/; revision=6192